# Raytracer

./: CMakeLists.txt  main  main.cpp  raytracer  readme.md
model/: Camera.cpp  Camera.h  Hittable.cpp  Hittable.h  Image.cpp  Image.h  Painter.cpp  Painter.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  camera.cpp  camera.h  draw_thread.cpp  draw_thread.h  hit_record.h  hittable.h  image.cpp  image.h  material.h  painter_thread.cpp  painter_thread.h  scene.cpp  scene.h
model/collision/: aabb.cpp  aabb.h  bvh_node.cpp  bvh_node.h  constant_medium.cpp  constant_medium.h  hit_record.h  hittable.h  instance_rotate_y.cpp  instance_rotate_y.h
model/concurrency/: BaseThread.h  StatusThread.h  base_thread.cpp  base_thread.h  draw_thread.cpp  draw_thread.h  lambda_thread.h  status_thread.h
model/geometry/: Sphere.cpp  Sphere.h  aabb.cpp  aabb.h  box.cpp  box.h  sphere.cpp  sphere.h  xy_rect.cpp  xy_rect.h  xz_rect.cpp  xz_rect.h  yz_rect.cpp  yz_rect.h
model/infostream/: safe_stream.cpp
model/materials/: checker_texture.cpp  checker_texture.h  dielectric.cpp  dielectric.h  diffuse_light.cpp  diffuse_light.h  grass.cpp  grass.h  image_texture.h  isotropic.cpp  isotropic.h  lambertian.cpp  lambertian.h  material.h  metal.cpp  metal.h  reflective.cpp  reflective.h  solid_color.h  texture.h
model/materials/textures/: image_texture.cpp  image_texture.h  texture.h  tiled_image_texture.cpp  tiled_image_texture.h
model/worldgen/: night_world_gen.cpp  night_world_gen.h
utility/: BaseThread.cpp  LambdaThread.h  Random.h  Ray.h  Utility.h  Vec3.h  color_helper.h  constants.h  defines.h  math_macros.h  perlin.h  perlin_noise.h  random.h  ray.h  safe_stream.cpp  safe_stream.h  stopwatch.cpp  stopwatch.h  vec3.cpp  vec3.h
